samples/_failures_safe/1761727709_41741b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a07ace30.c:134:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  134 | int matrix
      | ^~~
